# filerize

./: .editorconfig  .gitignore  LICENSE  README.md  pyproject.toml
